--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "zemreyilmaz@zemreyilmaz.com.tr",
+    "Issuer": "zemreyilmaz@zemreyilmaz.com.tr",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "zemreyilmazissupersecretkeyXzemreyilmazissupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
